--- a/local.properties
+++ b/local.properties
@@ -1,6 +1,6 @@
-sdk.dir=//C\:/Users/<USERNAME>/AppData/Local/Android/android-sdk
-ndk.dir=//C\:/Users/<USERNAME>/AppData/Local/Android/android-sdk/ndk-bundle
-systemProp.http.proxyHost=<proxy>
+sdk.dir=//C\:/Users/joschimm/AppData/Local/Android/android-sdk
+ndk.dir=//C\:/Users/joschimm/AppData/Local/Android/android-sdk/ndk-bundle
+systemProp.http.proxyHost=web-proxy.bbn.hpecorp.net
 systemProp.http.proxyPort=8080
-systemProp.https.proxyHost=<proxy>
+systemProp.https.proxyHost=web-proxy.bbn.hpecorp.net
 systemProp.https.proxyPort=8080
