--- a/settings.gradle
+++ b/settings.gradle
@@ -8,13 +8,6 @@
  * in the user guide at https://docs.gradle.org/4.1/userguide/multi_project_builds.html
  */
 
-/*
-// To declare projects as part of a multi-project build use the 'include' method
-include 'shared'
-include 'api'
-include 'services:webservice'
-*/
-
-rootProject.name = 'photowalk'
-include 'photowalk-server'
-include 'photowalk-app'
+rootProject.name = 'meetme'
+include 'meetme-server'
+include 'meetme-app'
