--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,7 @@
 version '1.0-SNAPSHOT'
 group 'de.meetme'
-description 'Meetme Dropwizard Project'
+description 'Meetme Sample Dropwizard Project'
 
-apply plugin: 'java'
-apply plugin: 'groovy'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 allprojects {
     repositories {
@@ -19,16 +14,6 @@ allprojects {
     }
 }
 
-
-dependencies {
-    compile 'com.h2database:h2:1.4.196'
-    compile 'io.dropwizard:dropwizard-core:1.1.3'
-    compile 'io.dropwizard:dropwizard-hibernate:1.1.3'
-    compile 'org.codehaus.groovy:groovy-all:2.4.10'
-
-    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
-    testCompile 'junit:junit:4.12'
-}
 
 /**
  * buildscript contains dependencies for the build tool itself not for the target build.
@@ -45,16 +30,6 @@ buildscript {
 
     repositories {
         jcenter()
-    }
-
-    /**
-     * The dependencies block configures the dependencies Gradle needs to use
-     * to build your project. The following line adds Android plugin for Gradle
-     * version 2.3.3 as a classpath dependency.
-     */
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 
 }
