--- a/meetme-server/build.gradle
+++ b/meetme-server/build.gradle
@@ -13,12 +13,15 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 apply plugin: 'application'
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     compile 'com.h2database:h2:1.4.196'
-    compile 'io.dropwizard:dropwizard-core:1.1.3'
-    compile 'io.dropwizard:dropwizard-hibernate:1.1.3'
-    compile 'org.codehaus.groovy:groovy-all:2.4.10'
+    compile 'io.dropwizard:dropwizard-core:1.3.5'
+    compile 'io.dropwizard:dropwizard-hibernate:1.3.5'
+    compile 'org.codehaus.groovy:groovy-all:2.5.2'
+    compile 'javax.xml.bind:jaxb-api:2.2.11'
 
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'junit:junit:4.12'
