--- a/meetme-server/meetme.yml
+++ b/meetme-server/meetme.yml
@@ -29,8 +29,8 @@ database:
   driverClass: org.h2.Driver
   user: sa
   password:
-  url: jdbc:h2:mem:testDb # Use this for in memory database faster but after restart database is gone.
-#  url: jdbc:h2:~/meetme;DB_CLOSE_DELAY=-1; # Use this for persistent database. Database file is stored in your User directory: meetme.
+#  url: jdbc:h2:mem:testDb # Use this for in memory database faster but after restart database is gone.
+  url: jdbc:h2:file:./database/meetmedb;DB_CLOSE_DELAY=-1; # Use this for persistent database. Database file is stored in your User directory: meetme.
 
   properties:
     charSet: UTF-8
