--- a/meetme-server/build.gradle
+++ b/meetme-server/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile 'io.dropwizard:dropwizard-hibernate:1.3.5'
     compile 'org.codehaus.groovy:groovy-all:2.5.2'
     compile 'javax.xml.bind:jaxb-api:2.2.11'
+    compile 'io.dropwizard:dropwizard-assets:1.3.5'
 
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'junit:junit:4.12'
@@ -44,6 +45,7 @@ shadowJar {
         attributes 'Built-By': InetAddress.localHost.hostName
         attributes 'Created-By': 'Gradle ' + gradle.gradleVersion
         attributes 'Main-Class': mainClassName
+        attributes 'Class-Path' : '../../../frontend/static/'
     }
     archiveName 'meetme-server-shadow.jar'
 }
