--- a/meetme-server/build.gradle
+++ b/meetme-server/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'io.dropwizard:dropwizard-core:1.3.5'
     compile 'io.dropwizard:dropwizard-hibernate:1.3.5'
     compile 'io.dropwizard:dropwizard-forms:1.3.5'
+    compile 'io.dropwizard:dropwizard-forms:1.3.5'
     compile 'org.codehaus.groovy:groovy-all:2.5.2'
     compile 'javax.xml.bind:jaxb-api:2.2.11'
     compile 'io.dropwizard:dropwizard-assets:1.3.5'
